# txtpand

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: anthropic_middleware.py  basic_usage.py  custom_dictionary.py  openai_middleware.py  spaceless_mode.py
scripts/: build_corpus.py
src/txtpand/: __init__.py  __main__.py  config.py  exceptions.py  types.py
src/txtpand/cli/: __init__.py  clip.py  config_file.py  factory.py  pipe.py
src/txtpand/core/: __init__.py  context.py  expander.py  matcher.py  scorer.py  segmenter.py  tokenizer.py
src/txtpand/corpus/: __init__.py  bigrams.json  loader.py  words.json
src/txtpand/learning/: __init__.py  user_model.py
src/txtpand/llm/: __init__.py  fallback.py  prompt.py  providers.py
src/txtpand/middleware/: __init__.py  anthropic.py  openai.py
tests/: conftest.py  test_context.py  test_expander.py  test_llm_fallback.py  test_matcher.py  test_middleware.py  test_scorer.py  test_segmenter.py  test_tokenizer.py
tests/fixtures/: shorthand_samples.json  spaceless_samples.json
